Fix text alignment in bubble

--- a/src/pages/addyi/components/TestimonialBubbles/TestimonialBubbles.module.css
+++ b/src/pages/addyi/components/TestimonialBubbles/TestimonialBubbles.module.css
@@ -192,6 +192,7 @@
     font-size: 14px;
     line-height: 20px;
     font-weight: 600;
+    text-align: left;
   }
 
   .authorInfo {
